# apexstore-api

./: main.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/repositories/: categoria_repo.py  imagen_repo.py  producto_repo.py
app/schemas/: categoria.py  imagen.py  producto.py
